--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
     "bootstrap": "^5.1.3",
     "emailjs": "^4.0.0",
     "emailjs-com": "^3.2.0",
+    "framer-motion": "^7.2.1",
     "react": "^18.1.0",
     "react-bootstrap": "^2.3.1",
     "react-dom": "^18.1.0",
