--- a/client/package.json
+++ b/client/package.json
@@ -24,7 +24,6 @@
     "react-intersection-observer": "^9.5.2",
     "react-router": "^6.15.0",
     "react-router-dom": "^6.15.0",
-    "react-scripts": "5.0.1",
     "react-toastify": "^8.2.0",
     "web-vitals": "^2.1.4"
   },
@@ -63,6 +62,7 @@
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-prettier": "^5.0.0",
     "eslint-plugin-react": "^7.33.2",
-    "prettier": "^3.0.2"
+    "prettier": "^3.0.2",
+    "react-scripts": "5.0.1"
   }
 }
